--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Titolo grande</h1>
+    </header>
+
+    <nav>
+        <button>info</button>
+        <button>contatti</button>
+        <button>mappa</button>
+    </nav>
     
 </body>
 </html>
