--- a/index.html
+++ b/index.html
@@ -13,10 +13,27 @@
     </header>
 
     <nav>
-        <button>info</button>
-        <button>contatti</button>
-        <button>mappa</button>
+        <button>Info</button>
+        <button>Contatti</button>
+        <button>Mappa</button>
     </nav>
+
+    <main>
+        <section>
+            <h2>Titolo sezione uno</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, doloribus! Quidem culpa consequuntur atque perspiciatis. Voluptate magnam beatae modi atque voluptatem consequatur. Dolore blanditiis debitis dolor tempore nesciunt accusantium numquam.</p>
+        </section>
+
+        <section>
+            <h2>Titolo sezione due</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, minima pariatur adipisci quibusdam maxime unde quaerat dicta reprehenderit, cupiditate quidem nostrum voluptatum incidunt odit beatae aliquid, nihil totam quae neque?</p>
+        </section>
+
+        <section>
+            <h2>Titolo Sezione tre</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum omnis tempora modi, consectetur officia repellendus iure distinctio corrupti, illum veniam sequi, eum vitae. Nisi fugit saepe quo doloribus dignissimos voluptas.</p>
+        </section>
+    </main>
     
 </body>
 </html>
